--- a/src/main/webapp/css/css/mixins/_text-hide.css
+++ b/src/main/webapp/css/css/mixins/_text-hide.css
@@ -1,3 +1,43 @@
+input[type="file"] {
+    display: none;
+
+}
+
+.label-images {
+    display: inline-block;
+    text-transform: uppercase;
+    color: #769cea;
+    width: 50px;
+    height: 50px;
+    background-color: #fff;
+    text-align: center;
+    padding-top: 10px;
+    border-radius: 50%;
+    border: 1px solid #769cea;
+
+}
+.imageContainer img {
+    width: 70px; /* Giới hạn chiều rộng tối đa là 200px */
+    height: 70px; /* Giới hạn chiều cao tối đa là 200px */
+    border: 1px solid #0d47a1;
+}
+
+.image-wrapper {
+    position: relative;
+    display: inline-block;
+    margin: 10px;
+}
+
+.delete-icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
+    color: #7084cd;
+    cursor: pointer;
+}
+
 .modal-confirm {
     display: none;
     position: fixed;
